--- a/index.html
+++ b/index.html
@@ -296,19 +296,19 @@ clear: both;
 
 <div class="responsive">
 <div class="gallery">
-   <a target="_blank" href="networkusers.png">
-      <img src="networkusers.png" alt="Network Users" width="600" height="400">
+   <a target="_blank" href="./about/c4.png">
+      <img src="./about/c4.png" alt="C4" width="600" height="400">
    </a>
-   <div class="desc">Uses PlantUML Stdlib OSA icons as described here TODO. insert link to puml file</div>
+   <div class="desc">Uses PlantUML Stdlib C4 icons as described here TODO. insert link to puml file</div>
 </div>
 </div>
 
 <div class="responsive">
 <div class="gallery">
-   <a target="_blank" href="networkusers.png">
-      <img src="networkusers.png" alt="Network Users" width="600" height="400">
+   <a target="_blank" href="./about/aws.png">
+      <img src="./about/aws.png" alt="AWS" width="600" height="400">
    </a>
-   <div class="desc">Uses PlantUML Stdlib OSA icons as described here TODO. insert link to puml file</div>
+   <div class="desc">Uses PlantUML Stdlib AWSlib icons as described here TODO. insert link to puml file</div>
 </div>
 </div>
 
