--- a/index.html
+++ b/index.html
@@ -232,14 +232,15 @@
 <tr class="row-odd"><td><p><strong>Diagram of a Typical Network</strong></p></td>
 </tr>
 <tr class="row-even"><td><p class="plantuml">
-<img src="_images/plantuml-0713547f7871ee1d34c9944faf7277b1f0bf8fb2.png" alt="&#64;startuml
+<img src="_images/plantuml-37c8ec247632b96b1ec942a75b43eb8a9d642e1e.png" alt="&#64;startuml
 
-!include ./osa/Common.puml
-!include ./osa/User/all.puml
-!include ./osa/Hardware/all.puml
-!include ./osa/Misc/all.puml
-!include ./osa/Server/all.puml
-!include ./osa/Site/all.puml
+!define osaPuml https://raw.githubusercontent.com/Crashedmind/PlantUML-opensecurityarchitecture2-icons/master
+!include osaPuml/Common.puml
+!include osaPuml/User/all.puml
+!include osaPuml/Hardware/all.puml
+!include osaPuml/Misc/all.puml
+!include osaPuml/Server/all.puml
+!include osaPuml/Site/all.puml
 
 '. Mary is a Developer in the Product team. She has a Windows 10 PC and an Android phone.
 '. Bob is a Manager in the Accounts team. He has Mac and an iPhone.
