--- a/NetworkUsersMachines/NetworkUsersMachines.html
+++ b/NetworkUsersMachines/NetworkUsersMachines.html
@@ -328,7 +328,7 @@ footer %filename() rendered with PlantUML version %version()\nThe Hitchhiker’s
 <p>Here we have a typical network diagram:</p>
 <ol class="arabic simple">
 <li><p>Mary is a Developer in the Product team. She has a Windows 10 PC and an Android phone.</p></li>
-<li><p>Bob is an Accountant in the Accounts team. He has Mac and an iPhone.</p></li>
+<li><p>Bob is an Accountant in the Accounts team. He has a Mac and an iPhone.</p></li>
 <li><p>They connect to the office server, and via a firewall to the Internet.</p></li>
 </ol>
 <p>There are 3 types of element with different properties:</p>
@@ -666,7 +666,7 @@ footer %filename() rendered with PlantUML version %version()\nThe Hitchhiker’s
 <p>Now for the fun bit…</p>
 <ol class="arabic simple">
 <li><p>Mary is a Developer in the Product team. She has a Windows 10 PC and an Android phone.</p></li>
-<li><p>Bob is an Accountant in the Accounts team. He has Mac and an iPhone.</p></li>
+<li><p>Bob is an Accountant in the Accounts team. He has a Mac and an iPhone.</p></li>
 <li><p>They connect to the office server, and via a firewall to the Internet.</p></li>
 </ol>
 <div class="figure align-center" id="id19">
