--- a/Stdlib/stdlibRequirements.html
+++ b/Stdlib/stdlibRequirements.html
@@ -224,7 +224,7 @@ PlantUML Stdlib to empower the user per todoref</p>
 </thead>
 <tbody>
 <tr class="row-even"><td><p><strong>OBV_DEFINE_DEPRECATED</strong></p></td>
-<td><p>Marcos use define and definelong which are deprecated per below</p></td>
+<td><p>Macros use define and definelong which are deprecated per below</p></td>
 </tr>
 <tr class="row-odd"><td><p><strong>OBV_DRY</strong></p></td>
 <td><p>DRY (Don’t Repeat Yourself). The macros are repeated</p>
@@ -271,7 +271,7 @@ some have an <code class="docutils literal notranslate"><span class="pre">`all.p
 <td><p>At least 3 parameters are required and are rendered in the diagams</p>
 <blockquote>
 <div><p><code class="docutils literal notranslate"><span class="pre">`!define</span> <span class="pre">Batch(e\_alias,</span> <span class="pre">e\_label,</span> <span class="pre">e\_techn)`</span></code>.</p>
-<p>In other words, the marcos force a user to specify things they may not care about e.g. to specify color in this macro, the user needs to specify the preceeding parameters also</p>
+<p>In other words, the macros force a user to specify things they may not care about e.g. to specify color in this macro, the user needs to specify the preceeding parameters also</p>
 <p><em>!define WHATEVER(_alias, _label, _shape, _color) ENTITY(_shape,_color,whatever,_label, _alias,WHATEVER)</em></p>
 <p>So if we wanted a colored or scaled icon only (with no label or technology), we have to implement it ourselves.</p>
 </div></blockquote>
