--- a/todo.html
+++ b/todo.html
@@ -28,6 +28,8 @@
         <script type="text/javascript" src="_static/doctools.js"></script>
         <script type="text/javascript" src="_static/language_data.js"></script>
         <script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script>
+        <script type="text/javascript" src="https://www.googletagmanager.com/gtag/js?id=UA-168177985-1"></script>
+        <script type="text/javascript" src="_static/google_analytics_tracker.js"></script>
     
     <script type="text/javascript" src="_static/js/theme.js"></script>
 
